# GitPulse

./: .env  .gitignore  CACHE_API.md  GITHUB_API.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs
src/components/: Heatmap.jsx  Login.jsx  heatmap.css
src/services/: cache.js  github.js  tauri-api.js
